# RayCastProject

./: .gitignore  CMakeLists.txt  README.md
Dependencies/SDL2/: CMakeLists.txt
include/: Player.h
src/: main.c
